--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
-    "library": "file:../library",
+    "library": "file:../library/dist/library-0.0.0.tgz",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
