fix: change to workflow_dispatch

--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-  workflow_run: null
+  workflow_dispatch: null
 jobs:
   publish-package:
     runs-on: ubuntu-latest
