--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -17,6 +17,7 @@ jobs:
       - name: Login to github registry
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN  }}" > ~/.npmrc
+          cat ~/.npmrc
       - name: Bundle and publish library
         run: |
           cd library
