--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -18,8 +18,7 @@ jobs:
           node-version: 20
       - name: Login to github registry
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-          cat ~/.npmrc
+          echo "FelipeSanchezSoberanis\n${{ secrets.GITHUB_TOKEN }}" | npm login --registry https://npm.pkg.github.com/ --auth-type legacy
       - name: Bundle and publish library
         run: |
           cd library
