feat: add continue on error

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -17,6 +17,7 @@ jobs:
           cache: npm
           cache-dependency-path: library/package-lock.json
       - name: Run pr checks
+        continue-on-error: true
         run: |
           echo_section_title() {
             separator=""
