--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -16,57 +16,66 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: library/package-lock.json
-      - name: Run pr checks
+      - name: Install dependencies
+        working-directory: ./library
+        run: |
+          npm i
+      - name: Run tests
+        id: run_tests
+        working-directory: ./library
         continue-on-error: true
         run: |
-          echo_section_title() {
-            separator=""
-            for _ in $(seq 1 ${#1}); do
-              separator="${separator}="
-            done
-
-            echo ""
-            echo ""
-            echo "${separator}"
-            echo "${1}"
-            echo "${separator}"
-            echo ""
-            echo ""
-          }
+          npm run test
+      - name: Check formatting
+        id: check_formatting
+        working-directory: ./library
+        continue-on-error: true
+        run: |
+          npm run format:check
+      - name: Lint
+        id: lint
+        working-directory: ./library
+        continue-on-error: true
+        run: |
+          npm run lint
+      - name: Generate status message and error status
+        id: generate_status
+        run: |
           status_message=""
           error="false"
 
-          cd library
-
-          echo_section_title "Installing dependencies"
-          npm i
-
-          echo_section_title "Running tests"
-          npm run test
-          if [ $? -eq 0 ]; then
+          if [ ${{ steps.run_tests.outcome }} = "success" ]; then
             status_message="✅ All tests passed"
           else
             status_message="❌ Some tests have failed"
             error="true"
           fi
 
-          echo_section_title "Checking formatting"
-          npm run format:check
-          if [ $? -eq 0 ]; then
+          if [ ${{ steps.check_formatting.outcome }} = "success" ]; then
             status_message="${status_message}\n✅ All files correctly formatted"
           else
             status_message="${status_message}\n❌ Some files have formatting errors"
             error="true"
           fi
 
-          echo_section_title "Checking eslint rules"
-          npm run lint
-          if [ $? -eq 0 ]; then
+          if [ ${{ steps.lint.outcome }} = "success" ]; then
             status_message="${status_message}\n✅ All files obey eslint rules"
           else
             status_message="${status_message}\n❌ Some files dont obey eslint rules"
             error="true"
           fi
 
-          echo_section_title "Result"
-          echo -e ${status_message}
+          echo "status_message=${status_message}" >> $GITHUB_OUTPUT
+          echo "error=${error}" >> $GITHUB_OUTPUT
+      - name: Comment pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '${{ steps.generate_status.outputs.status_message }}'
+            })
+      - name: Set exit code
+        run: |
