--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -75,7 +75,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '${{ steps.generate_status.outputs.status_message }}'
+              body: "${{ steps.generate_status.outputs.status_message }}"
             })
       - name: Set exit code
         run: |
