fix: not needed?

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -81,7 +81,7 @@ jobs:
             })
       - name: Set exit code
         run: |
-          if [ "${{ steps.generate_status.outputs.error }}" = "true"]; then
+          if [ ${{ steps.generate_status.outputs.error }} = "true"]; then
             exit 1
           else
             exit 0
