--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -1,8 +1,6 @@
 name: Pr checks
 on:
-  pull_request_target:
-    types:
-      - opened
+  pull_request_target: null
   workflow_dispatch: null
 jobs:
   run_pr_checks:
