fix: escape backticks

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -44,11 +44,11 @@ jobs:
           SUCCESS_ICON="✅"
           ERROR_ICON="❌"
           JEST_SUCCESS_MESSAGE="${SUCCESS_ICON} All tests passed"
-          JEST_ERROR_MESSAGE="${ERROR_ICON} Some tests have failed, run `npm run test` to see failing tests"
+          JEST_ERROR_MESSAGE="${ERROR_ICON} Some tests have failed, run \\\`npm run test\\\` to see failing tests"
           PRETTIER_SUCCESS_MESSAGE="${SUCCESS_ICON} All files correctly formatted"
-          PRETTIER_ERROR_MESSAGE="${ERROR_ICON} Some files have formatting errors, run `npm run format:check` to see formatting errors"
+          PRETTIER_ERROR_MESSAGE="${ERROR_ICON} Some files have formatting errors, run \\\`npm run format:check\\\` to see formatting errors"
           ESLINT_SUCCESS_MESSAGE="${SUCCESS_ICON} All files obey eslint rules"
-          ESLINT_ERROR_MESSAGE="${ERROR_ICON} Some files dont obey eslint rules, run `npm run lint` to see eslint errors"
+          ESLINT_ERROR_MESSAGE="${ERROR_ICON} Some files dont obey eslint rules, run \\\`npm run lint\\\` to see eslint errors"
 
           status_message=""
           error="false"
